--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "typeRoots": ["node_modules/@types", "src/app/azure-media-player"]
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
